# battleship

./: .env.example  .gitignore  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml  release.yml
docs/operations/: deployment_strategy.md  firefox_homelab_deployment_plan.md  scheduled_scans_runbook.md
infra/: README.md
infra/environments/dev/: main.tf  terraform.tfvars  variables.tf
infra/environments/prod/: main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/modules/ecs/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf
infra/modules/rds/: main.tf  variables.tf
infra/modules/s3/: main.tf
infra/modules/vpc/: main.tf  variables.tf
libs/common/: pyproject.toml
libs/common/src/common/: __init__.py  utils.py
libs/common/tests/: test_utils.py
scripts/: bootstrap.sh  example_postings.json  push_remotes.sh  register_job_source.sh  scan_postings.sh  scan_sources.sh
services/emailer/: Dockerfile  pyproject.toml
services/emailer/src/emailer/: main.py  worker.py
services/emailer/tests/: test_api.py  test_worker.py
services/frontend/: Dockerfile  pyproject.toml
services/frontend/src/frontend/: main.py
services/frontend/tests/: test_frontend_api.py
services/recommender/: Dockerfile  pyproject.toml
services/recommender/src/recommender/: main.py
services/recommender/tests/: test_auth_audit.py  test_health.py  test_job_sources.py  test_observability.py  test_persistence.py  test_profiles.py  test_recommend.py  test_token_lifecycle.py
tests/: test_smoke_harness.py
tests/bdd/: test_emailer_bdd.py  test_frontend_bdd.py  test_recommender_bdd.py
tests/bdd/features/: emailer.feature  frontend.feature  recommender.feature
