[project]
name = "operation-battleship-workspace"
version = "0.1.0"
description = "OperationBattleship monorepo workspace"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-bdd>=7.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4",
]

[tool.uv.workspace]
members = [
  "libs/common",
  "services/recommender",
  "services/frontend",
  "services/emailer",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
