[project]
name = "common"
version = "0.1.0"
description = "Shared utilities for OperationBattleship services"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]
