[project]
name = "emailer-service"
version = "0.1.0"
description = "Email digest worker microservice"
requires-python = ">=3.12"
dependencies = [
  "common",
  "fastapi[standard]>=0.115.0",
  "pydantic>=2.10.0",
  "uvicorn>=0.34.0",
]

[tool.uv.sources]
common = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emailer"]
